1.2.3i1:
    Event Console:
    * New rule feature: automatically delete after action

1.2.2b2:
    BI:
    * FIX: fix exception in BI-Boxes views of host groups

    Event Console:
    * FIX: support non-Ascii characters in matching expressions. Note:
           you need to edit and save each affected rule once in order
           to make the fix work.
    * FIX: Fixed exception when logging actions exectuted by mkeventd
    * FIX: etc/init.d/mkeventd flush did not work when mkeventd was stopped

    Multisite:
    * FIX: Fixed several minor IE7 related layout bugs
    * Cleanup form for executing commands on hosts/services

    WATO:
    * FIX: Fixed layout of rulelist table in IE*
    * FIX: Fixed adding explicit host names to rules in IE7

1.2.2b1:
    Core:
    * cmk --notify: added notification script to generate HTML mails including
      the performance graphs of hosts and services
    * cmk --notify: added the macros NOTIFY_LASTHOSTSTATECHANGE, NOTIFY_HOSTSTATEID,
      NOTIFY_LASTSERVICESTATECHANGE, NOTIFY_SERVICESTATEID, NOTIFY_NOTIFICATIONCOMMENT,
      NOTIFY_NOTIFICATIONAUTHOR, NOTIFY_NOTIFICATIONAUTHORNAME, NOTIFY_NOTIFICATIONAUTHORALIAS
    * FIX: more robust deletion of precompiled files to ensure the correct 
      creation of the files (Thanks to Guido Günther)
    * FIX: Inventory for cluster nodes who are part of multiple clusters 
    * cmk --notify: added plugin for sms notification
    * FIX: precompiled checks: correct handling of sys.exit() call when using python2.4 
    * cmk --notify: improved logging on wrong notification type
    * RPM: Added check_mk-agent-scriptless package (Same as normal agent rpm,
      but without RPM post scripts)

    Checks & Agents:
    * winperf_processor now outputs float usage instead of integer
    * FIX: mssql_counters.file_sizes - Fixed wrong value for "Log Files" in output
    * FIX: drbd: Parameters for expected roles and disk states can now be set to 