@@ -1,4 +1,8 @@
 1.2.3i1:
+    Core:
+    * New feature: agents can send data for other hosts
+      "piggyback".
+
     Event Console:
     * New rule feature: automatically delete after action
 
